--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,1 +1,82 @@
 @import './_variables';
+
+.hero {
+	// background: linear-gradient($darken, $darken), url('../dist/assets/images/hero-mobile-img.png');
+	background-size: cover;
+	height: fit-content;
+
+	&__logo-container {
+		position: absolute;
+		top: 4vmin;
+		left: 5vmin;
+		color: $bg;
+
+		h1 {
+			font-size: 10vmin;
+		}
+		p {
+			width: 55vmin;
+			margin-top: 1vmin;
+			font-size: 4.9vmin;
+		}
+	}
+
+	&__bag-svg {
+		display: block;
+		width: 100%;
+		height: auto;
+	}
+
+	&__background {
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		width: 100%;
+		height: 65vmin;
+		background: linear-gradient($darken, $darken), url('../dist/assets/images/hero-mobile-img.png');
+		background-size: cover;
+		z-index: -1;
+	}
+}
+
+.content-container {
+	flex-grow: 1;
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	background-color: $bg;
+	border-top-right-radius: 30px;
+	border-top-left-radius: 30px;
+	padding: 7vmin 4vmin 0.2vmin 4vmin;
+
+	footer {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		width: 100%;
+
+		p {
+			text-align: center;
+			font-size: 0.67rem;
+		}
+	}
+}
+
+.main-empty {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-grow: 1;
+	height: 100%;
+	border: 2px dashed $accent;
+	margin: 4vmin 0;
+
+	p {
+		font-size: 11vmin;
+		width: 80%;
+		font-weight: bold;
+		color: $accent;
+		text-align: center;
+	}
+}
