styled recipes page for mobile

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,6 +1,7 @@
 $bg: #f9fcf8;
 $section-light: #eaf0e8;
-$section-dark: #437b30;
+$section-dark: #c1d4bb;
+$section-dark-active: #b0c5a9;
 $accent: #437b30;
 $font: #3a5731;
 $inputs: white;
