--- a/styles/empty.scss
+++ b/styles/empty.scss
@@ -1,1 +1,28 @@
 @import './_variables';
+
+.main-empty {
+	flex-grow: 1000;
+	height: 100%;
+	border: 2px dashed $accent;
+	margin: 4vmin 0;
+	position: relative;
+
+	&__wrapper {
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
+	p {
+		font-size: 11vmin;
+		width: 80%;
+		font-weight: bold;
+		color: $accent;
+		text-align: center;
+	}
+}
