--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,4 +1,7 @@
 @import './_variables';
+@import './global.scss';
+@import './empty.scss';
+@import './with-recipes.scss';
 
 .hero {
 	// background: linear-gradient($darken, $darken), url('../dist/assets/images/hero-mobile-img.png');
@@ -48,35 +51,19 @@
 	background-color: $bg;
 	border-top-right-radius: 30px;
 	border-top-left-radius: 30px;
-	padding: 7vmin 4vmin 0.2vmin 4vmin;
+	padding: 1rem 1rem 0.1rem 1rem;
 
 	footer {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		justify-content: flex-end;
 		width: 100%;
+		flex-grow: 1;
 
 		p {
 			text-align: center;
 			font-size: 0.67rem;
 		}
-	}
-}
-
-.main-empty {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-grow: 1;
-	height: 100%;
-	border: 2px dashed $accent;
-	margin: 4vmin 0;
-
-	p {
-		font-size: 11vmin;
-		width: 80%;
-		font-weight: bold;
-		color: $accent;
-		text-align: center;
 	}
 }
