first css draft is ready, starting JS

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -20,17 +20,19 @@ body {
 
 .heading {
 	font-family: 'Lobster Two', cursive;
+	font-size: 2rem;
 	&--your-recipes {
 		color: $accent;
-		font-size: 1.7rem;
 	}
 	&--new-recipe {
+		font-size: 2rem;
+		margin-bottom: 0rem;
 	}
 }
 
 .section-heading {
 	font-weight: bold;
-	font-size: 1.13rem;
+	font-size: 1.15rem;
 }
 
 .input {
@@ -41,12 +43,13 @@ body {
 	background-color: $inputs;
 	border: none;
 	border-radius: 8px;
-	padding: 0.4rem 0.5rem 0.3rem 0.4rem;
+	padding: 0.5rem 0.5rem 0.5rem 0.4rem;
 
 	&--search {
 		border: 1px solid $section-dark;
 	}
 	&--short {
+		margin-right: 0.7rem;
 	}
 }
 
@@ -59,12 +62,12 @@ body {
 	border-radius: 8px;
 	padding: 0.5rem 0 0.4rem 0;
 	cursor: pointer;
+	white-space: nowrap;
+	text-align: center;
 
 	&--new-recipe {
 		padding: 0.9rem 0 0.7rem 0;
 		width: 100%;
-		&--short {
-		}
 	}
 	&--nav {
 		&--active {
@@ -81,6 +84,10 @@ body {
 		padding: 0.5rem 1rem 0.4rem 1rem;
 	}
 	&--add {
+		width: 100%;
+
+		margin-top: 0.4rem;
+		margin-bottom: 0.3rem;
 	}
 }
 
@@ -100,6 +107,15 @@ body {
 	}
 }
 
+input::-webkit-calendar-picker-indicator {
+	opacity: 100;
+}
+
 .hidden {
 	display: none;
+}
+
+.visible {
+	display: flex !important;
+	flex-direction: column;
 }
