--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,6 +2,7 @@
 @import './global.scss';
 @import './empty.scss';
 @import './with-recipes.scss';
+@import './new-recipe';
 
 .hero {
 	// background: linear-gradient($darken, $darken), url('../dist/assets/images/hero-mobile-img.png');
@@ -43,7 +44,7 @@
 	}
 }
 
-.content-container {
+.content-container-mobile {
 	flex-grow: 1;
 	display: flex;
 	flex-direction: column;
@@ -59,11 +60,142 @@
 		align-items: center;
 		justify-content: flex-end;
 		width: 100%;
-		flex-grow: 1;
+		// flex-grow: 1;
 
 		p {
 			text-align: center;
 			font-size: 0.67rem;
 		}
+	}
+}
+
+.content-container-big-screen {
+	display: none;
+}
+
+//////////////////////////////////////////////////////////////////////////////////////////////
+// MOBILE - HORIZONTAL
+@media screen and (max-height: 567px) {
+	.hero {
+		display: none;
+	}
+}
+
+//////////////////////////////////////////////////////////////////////////////////////////////
+// TABLET
+@media screen and (min-height: 568px) and (min-width: 613px) {
+	.content-container-mobile {
+		grid-area: newRecipe;
+		.main-empty {
+			display: none;
+		}
+		&__new-recipe-btn {
+			display: none;
+		}
+		.main-recipes {
+			display: none;
+		}
+		.search {
+			display: none;
+		}
+	}
+
+	.hero {
+		grid-area: hero;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		height: 100%;
+		position: relative;
+
+		&__logo-container {
+			position: relative;
+			top: 1rem;
+			left: 1rem;
+
+			h1 {
+				font-size: 2.7rem;
+			}
+			p {
+				width: 90%;
+				margin-top: 0.3rem;
+				font-size: 1.3rem;
+			}
+		}
+
+		&__background {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 9rem;
+			border-bottom-right-radius: 30px;
+		}
+
+		&__bag-svg {
+			align-self: flex-end;
+		}
+	}
+
+	.content-container-big-screen {
+		grid-area: yourRecipes;
+		display: flex;
+		flex-direction: column;
+		background-color: $bg;
+		padding: 1rem;
+		height: 100%;
+		width: 100%;
+	}
+
+	body {
+		background-color: $section-dark;
+		display: grid;
+		grid-template-areas: "hero yourRecipes" "newRecipe yourRecipes";
+		gap: 0 1.56rem;
+		grid-template-columns: 37% auto;
+		grid-template-rows: 1fr auto;
+	}
+}
+
+// DESKTOP - NARROW + IPAD PRO HORIZONTAL
+@media screen and (min-height: 568px) and (min-width: 1025px) {
+	body {
+		// padding: 0 calc((100vw - 100vh) / 4);
+		width: 60rem;
+		margin: auto;
+		grid-template-columns: 33% auto;
+	}
+
+	.hero {
+		position: relative;
+		&__logo-container {
+			top: 0.3rem;
+			h1 {
+				font-size: 2rem;
+			}
+			p {
+				width: 90%;
+				font-size: 1.1rem;
+			}
+		}
+
+		&__background {
+			position: absolute;
+			width: 100%;
+			height: 6.5rem;
+			border-bottom-right-radius: 30px;
+			border-bottom-left-radius: 30px;
+		}
+
+		&__bag-svg {
+			align-self: flex-end;
+		}
+	}
+}
+
+//////////////////////////////////////////////////////////////////////////////////////////////
+// DESKTOP - WIDE
+@media screen and (min-width: 1367px) {
+	body {
 	}
 }
