--- a/styles/with-recipes.scss
+++ b/styles/with-recipes.scss
@@ -27,25 +27,11 @@
 .main-recipes {
 	margin-top: 1.5rem;
 
-	// &__nav {
-	// 	display: grid;
-	// 	background-color: $section-dark;
-	// 	grid-template-columns: repeat(4, 1fr);
-	// 	margin: 0.5rem -1rem 0 -1rem;
-	// }
-
 	&__recipes-container {
 		height: 100%;
+		border: 1px solid red;
 	}
 }
-
-// .placeholder {
-// 	position: absolute;
-// 	height: 100%;
-// 	width: 100%;
-// 	justify-content: center;
-// 	align-content: center;
-// }
 
 .recipe {
 	margin-top: 1rem;
@@ -99,11 +85,6 @@
 			&__label {
 				margin-left: 0.7rem;
 			}
-			// &__checkbox {
-			// 	vertical-align: middle;
-			// 	display: inline-block;
-			// 	margin-left: 10rem;
-			// }
 		}
 	}
 
