--- a/styles/main.scss
+++ b/styles/main.scss
@@ -44,11 +44,16 @@
 	}
 }
 
-.content-container-mobile {
+.new-wrapper {
+	display: flex;
 	flex-grow: 1;
+}
+
+.content-container-mobile {
 	display: flex;
 	flex-direction: column;
-	height: 100%;
+	flex-grow: 1;
+	height: max-height;
 	background-color: $bg;
 	border-top-right-radius: 30px;
 	border-top-left-radius: 30px;
@@ -188,18 +193,18 @@
 		&__logo-container {
 			top: 0.3rem;
 			h1 {
-				font-size: 2rem;
+				font-size: 1.7rem;
 			}
 			p {
 				width: 90%;
-				font-size: 1.1rem;
+				font-size: 0.9rem;
 			}
 		}
 
 		&__background {
 			position: absolute;
 			width: 100%;
-			height: 6.5rem;
+			height: 5.7rem;
 			border-bottom-right-radius: 30px;
 			border-bottom-left-radius: 30px;
 		}
