finished with main functionality

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -97,6 +97,7 @@ body {
 	border: none;
 	background-color: transparent;
 	cursor: pointer;
+	// background: url('../dist/assets/icons/icon-off.svg');
 
 	&--disabled {
 		background: url('../dist/assets/icons/icon-off.svg');
