--- a/styles/new-recipe.scss
+++ b/styles/new-recipe.scss
@@ -14,6 +14,7 @@
 
 	&__input-nest {
 		display: flex;
+		align-items: center;
 	}
 
 	&__recipe-text {
@@ -107,18 +108,29 @@
 		margin-top: 0rem;
 
 		input {
-			margin-top: 0.3rem;
-			margin-bottom: 0.2rem;
+			margin-top: 0.4vh;
+			margin-bottom: 0.3vh;
+		}
+
+		label {
+			font-size: calc(1rem + 0.3vh);
 		}
 
 		textarea {
-			margin-top: 0.3rem;
-			height: 6rem;
+			margin-top: 0.4vh;
+			height: 10vh;
 		}
 
 		select {
-			margin-top: 0.3rem;
-			margin-bottom: 0.7rem;
+			margin-top: 0.3vh;
+			margin-bottom: 0.7vh;
+		}
+
+		ul {
+			li {
+				margin-top: 0.7vh;
+				margin-bottom: 0vh;
+			}
 		}
 	}
 }
