made final tests

--- a/styles/new-recipe.scss
+++ b/styles/new-recipe.scss
@@ -56,6 +56,7 @@
 		padding: 0.5rem 0.5rem 0.5rem 0.4rem;
 		font-family: 'Comfortaa', cursive;
 		font-size: 1rem;
+		color: $font;
 
 		&:focus {
 			outline: none;
